<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="#D7E9FF"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/userAvatarImageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:layout_marginStart="10dp"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/userIdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fontFamily="@font/font"
            android:text="@string/ex1Id"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/userFirstNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fontFamily="@font/font"
            android:text="@string/ex1name"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/userLastNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fontFamily="@font/font"
            android:text="@string/ex1fn"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/userEmailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:fontFamily="@font/font"
            android:text="@string/ex1em"
            android:textColor="@color/black"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>